Agregando estilos de la seccion portfolio

--- a/index.html
+++ b/index.html
@@ -77,13 +77,25 @@
                         <img src="./images/image.png">
                     </figure>
                     <figure>
-                        <img src="./images/image.png">
+                        <img src="./images/image (1).png">
                     </figure>
                     <figure>
-                        <img src="./images/image.png">
+                        <img src="./images/image (2).png">
                     </figure>
                     <figure>
-                        <img src="./images/image.png">
+                        <img src="./images/image (3).png">
+                    </figure>
+                    <figure>
+                        <img src="./images/image (4).png">
+                    </figure>
+                    <figure>
+                        <img src="./images/image (5).png">
+                    </figure>
+                    <figure>
+                        <img src="./images/image (6).png">
+                    </figure>
+                    <figure>
+                        <img src="./images/image (7).png">
                     </figure>
                 </div>
             </section>
