Agregando imagenes para la seccion clients y los estilos respectivos

--- a/index.html
+++ b/index.html
@@ -73,30 +73,7 @@
             <section class="portfolio">
                 <h2>Portafolio</h2>
                 <div class="portfolio_container">
-                    <figure>
-                        <img src="./images/image.png">
-                    </figure>
-                    <figure>
-                        <img src="./images/image (1).png">
-                    </figure>
-                    <figure>
-                        <img src="./images/image (2).png">
-                    </figure>
-                    <figure>
-                        <img src="./images/image (3).png">
-                    </figure>
-                    <figure>
-                        <img src="./images/image (4).png">
-                    </figure>
-                    <figure>
-                        <img src="./images/image (5).png">
-                    </figure>
-                    <figure>
-                        <img src="./images/image (6).png">
-                    </figure>
-                    <figure>
-                        <img src="./images/image (7).png">
-                    </figure>
+
                 </div>
             </section>
             <!--CLIENTS-->
@@ -104,7 +81,16 @@
                 <h2>Clientes</h2>
                 <div class="clients_container">
                     <figure>
-                        <img src="" alt="">
+                        <img src="./images/image_client0.png" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./images/image_client1.png" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./images/image_client2.png" alt="">
+                    </figure>
+                    <figure>
+                        <img src="./images/image_client3.png" alt="">
                     </figure>
                 </div>
             </section>
